--- a/island_2021_depricated/index.html
+++ b/island_2021_depricated/index.html
@@ -9,7 +9,7 @@
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/island_2021_v2.json", {onProgress: UnityProgress});
+      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/island_2021.json", {onProgress: UnityProgress});
     </script>
   </head>
   <body>
