--- a/hoaxagent/index.html
+++ b/hoaxagent/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/HoaxAgent.loader.js";
       var config = {
-        dataUrl: buildUrl + "/HoaxAgent.data",
-        frameworkUrl: buildUrl + "/HoaxAgent.framework.js",
-        codeUrl: buildUrl + "/HoaxAgent.wasm",
+        dataUrl: buildUrl + "/HoaxAgent.data.gz",
+        frameworkUrl: buildUrl + "/HoaxAgent.framework.js.gz",
+        codeUrl: buildUrl + "/HoaxAgent.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Kreshnik Halili",
         productName: "Hoax Agent",
